--- a/GFL/index.html
+++ b/GFL/index.html
@@ -46,6 +46,15 @@
             margin: 0px;
         }
 
+        details {
+            display: inline;
+        }
+
+        summary {
+            display: inline;
+            color: deeppink;
+        }
+
         .tags {
             outline: 2px solid aqua;
             border-radius: 10rem;
