--- a/GFL/index.html
+++ b/GFL/index.html
@@ -53,6 +53,7 @@
         summary {
             display: inline;
             color: deeppink;
+            text-shadow: 0 0 5px rgba(240, 78, 205, 0.5);
         }
 
         .tags {
