--- a/GFL/index.html
+++ b/GFL/index.html
@@ -52,7 +52,7 @@
 
         summary {
             display: inline;
-            color: deeppink;
+            color: pink;
             text-shadow: 0 0 5px rgba(240, 78, 205, 0.5);
         }
 
