--- a/GFL/index.html
+++ b/GFL/index.html
@@ -95,7 +95,7 @@
             display: flex;
             flex-wrap: wrap;
             text-align: center;
-            font-size: 30px;
+            /* font-size: 30px; */
         }
 
         .flex-label {
@@ -139,8 +139,8 @@
                 <p><h1><a href="./mainpage">Link to topics repository</a></h1></p>
                 
                 <div id="input-type-container">
-                    <label class="flex-checked" id="search-label"><input type="radio" id="search-input" name="input-type" onclick="switchInputMode(this)" checked>Keyword</label>
-                    <label class="flex-label" id="tags-label"><input type="radio" id="tags-input" name="input-type" onclick="switchInputMode(this)">Tags</label>
+                    <label class="flex-checked" id="search-label"><input type="radio" id="search-input" name="input-type" onclick="switchInputMode(this)" checked><h2>Keyword</h2></label>
+                    <label class="flex-label" id="tags-label"><input type="radio" id="tags-input" name="input-type" onclick="switchInputMode(this)"><h2>Tags</h2></label>
                 </div>
 
                 <form>
