--- a/GFL/index.html
+++ b/GFL/index.html
@@ -100,13 +100,13 @@
 
         .flex-label {
             background-color: darkgreen;
-            padding: 10px 0px;
+            /* padding: 10px 0px; */
             flex: 50%;
         }
 
         .flex-checked {
             background-color: transparent;
-            padding: 10px 0px;
+            /* padding: 10px 0px; */
             flex: 50%;
         }
 
