--- a/GFL/index.html
+++ b/GFL/index.html
@@ -95,18 +95,17 @@
             display: flex;
             flex-wrap: wrap;
             text-align: center;
-            /* font-size: 30px; */
         }
 
         .flex-label {
             background-color: darkgreen;
-            /* padding: 10px 0px; */
+            line-height: 10px;
             flex: 50%;
         }
 
         .flex-checked {
             background-color: transparent;
-            /* padding: 10px 0px; */
+            line-height: 10px;
             flex: 50%;
         }
 
