--- a/GFL/index.html
+++ b/GFL/index.html
@@ -138,8 +138,8 @@
                 <p><h1><a href="./mainpage">Link to topics repository</a></h1></p>
                 
                 <div id="input-type-container">
-                    <label class="flex-checked" id="search-label"><input type="radio" id="search-input" name="input-type" onclick="switchInputMode(this)" value="search" checked><h2>Keyword</h2></label>
-                    <label class="flex-label" id="tags-label"><input type="radio" id="tags-input" name="input-type" onclick="switchInputMode(this)" value="tags"><h2>Tags</h2></label>
+                    <label class="flex-checked"><input type="radio" id="search-input" name="input-type" onclick="switchInputMode(this)" value="search" checked><h2>Keyword</h2></label>
+                    <label class="flex-label"><input type="radio" id="tags-input" name="input-type" onclick="switchInputMode(this)" value="tags"><h2>Tags</h2></label>
                 </div>
 
                 <form>
@@ -173,27 +173,30 @@
 
             /** @param {HTMLElement} radioButton */
             function switchInputMode(radioButton) {
-                searchTextField.name = radioButton.id.replace('-input', '');
+                //searchTextField.name = radioButton.id.replace('-input', '');
+                searchTextField.name = radioButton.value;
                 searchTextField.value = '';
                 Array.from(document.getElementsByClassName('flex-checked'))[0].className = 'flex-label';
                 radioButton.parentElement.className = 'flex-checked';
                 switch (radioButton.id) {
+                //switch (radioButton.value) {
                     case 'tags-input':
+                    //case 'tags':
                         searchTextField.style.display = 'none';
                         toggleableTagsField.style.display = 'block';
-                        //document.getElementById('tags-label').className = 'flex-checked';
                         break;
                     case 'search-input':
+                    //case 'search':
                         searchTextField.style.display = 'inline';
                         toggleableTagsField.style.display = 'none';
-                        //document.getElementById('search-label').className = 'flex-checked';
                         for (const element of Array.from(document.getElementsByClassName('selectedTag'))) {
-                            document.getElementById(element.id.replace('-label', '')).checked = false;
+                            element.firstElementChild.checked = false
+                            //document.getElementById(element.id.replace('-label', '')).checked = false;
                             element.className = 'tags unselectedTag';
-                        }                        
-                        break;                
+                        }
+                        break;
                     default:
-                        console.log(radioButton.id);
+                        console.log(radioButton.value);
                         break;
                 }
             }
