--- a/GFL/index.html
+++ b/GFL/index.html
@@ -50,10 +50,18 @@
             display: inline;
         }
 
+        details[open] {
+            display: block;
+        }
+
         summary {
             display: inline;
             color: pink;
             text-shadow: 0 0 5px rgba(240, 78, 205, 0.5);
+        }
+
+        code {
+            color: yellow;
         }
 
         /* #region Tags */
