--- a/GFL/index.html
+++ b/GFL/index.html
@@ -57,7 +57,7 @@
         summary {
             display: inline;
             color: pink;
-            text-shadow: 0 0 5px rgba(240, 78, 205, 0.5);
+            text-shadow: 0 0 5px rgb(228, 100, 200);
         }
 
         code {
