--- a/GFL/index.html
+++ b/GFL/index.html
@@ -98,6 +98,11 @@
             aspect-ratio: 1/1;
         }
 
+        .gdoc + span {
+            font-size: 1px;
+            text-align: center;
+        }
+
         /* #region Input Type Selector */
         #input-type-container {
             display: flex;
