--- a/GFL/index.html
+++ b/GFL/index.html
@@ -98,7 +98,7 @@
             aspect-ratio: 1/1;
         }
 
-        .gdoc + span {
+        .gdoc + a {
             font-size: 1px;
             text-align: center;
         }
