--- a/GFL/index.html
+++ b/GFL/index.html
@@ -56,7 +56,7 @@
 
         summary {
             display: inline;
-            color: pink;
+            color: salmon;
             text-shadow: 0 0 5px rgb(255 181 253 / 50%);
         }
 
