--- a/GFL/index.html
+++ b/GFL/index.html
@@ -56,7 +56,7 @@
 
         summary {
             display: inline;
-            color: salmon;
+            color: rgb(233, 161, 152);
             text-shadow: 0 0 5px rgb(255 181 253 / 50%);
         }
 
