--- a/GFL/index.html
+++ b/GFL/index.html
@@ -61,7 +61,12 @@
         }
 
         code {
-            color: yellow;
+            background: rgba(0,0,0,0.9);
+            border: 1px solid rgba(255,255,255,0.15);
+            padding: 0px 3px;
+            margin: 0px -3px;
+            color: #aa759f;
+            border-radius: 2px;
         }
 
         /* #region Tags */
