--- a/GFL/index.html
+++ b/GFL/index.html
@@ -60,15 +60,6 @@
             text-shadow: 0 0 5px rgb(255 181 253 / 50%);
         }
 
-        code {
-            background: rgba(0,0,0,0.9);
-            border: 1px solid rgba(255,255,255,0.15);
-            padding: 0px 3px;
-            margin: 0px -3px;
-            color: #aa759f;
-            border-radius: 2px;
-        }
-
         /* #region Tags */
         .tags {
             outline: 2px solid aqua;
@@ -95,7 +86,7 @@
         /* #endregion */
 
         .twitter-tweet iframe {                         /* Needs more responsive solution. Works on first load only. */
-            width: inherit;
+            max-width: inherit !important;
         }
 
         .gdoc {
