--- a/GFL/index.html
+++ b/GFL/index.html
@@ -57,6 +57,11 @@
         .gdoc {
             width: 100%;
             aspect-ratio: 1/1;
+            border: 0px;
+        }
+
+        figure {
+            margin: 0px;
         }
 
         figcaption {
