--- a/GFL/index.html
+++ b/GFL/index.html
@@ -69,6 +69,10 @@
             text-align: center;
         }
 
+        dd {
+            margin-inline-start: 10px;
+        }
+
         /* #region Tags */
         .tags {
             outline: 2px solid aqua;
