--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
         <div class="container">
             <section id="main_content">
                 <p><h1><a href="/GFL">Link to GFL FAQs</a></h1></p>
+
+                <iframe id="reddit-embed" 
+                src="https://www.redditmedia.com/r/webdev/comments/u99d31/browser_support_for_reddit_embeds/i6bxart/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false"
+                sandbox="allow-scripts allow-same-origin allow-popups"
+                style="border: none; width: 100%" height="238"
+                scrolling="no">Your browser does not support iframes</iframe>
+                
             </section>
         </div>
     </body>
