--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
                 sandbox="allow-scripts allow-same-origin allow-popups"
                 style="border: none; width: 100%" height="238"
                 scrolling="no">Your browser does not support iframes</iframe>
-                
+
+                <iframe id="reddit-embed" 
+                src="https://www.redditmedia.com/r/girlsfrontline/comments/tqur46/weekly_commanders_lounge_march_29_2022/i312oo2/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark"
+                sandbox="allow-scripts allow-same-origin allow-popups" 
+                style="border: none;" height="278" width="640" 
+                scrolling="no"></iframe>`
             </section>
         </div>
     </body>
