--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <iframe id="reddit-embed" 
                 src="https://www.redditmedia.com/r/girlsfrontline/comments/tqur46/weekly_commanders_lounge_march_29_2022/i312oo2/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark"
                 sandbox="allow-scripts allow-same-origin allow-popups" 
-                style="border: none;" height="278" width="640" 
+                style="border: none; width: 100%;" height="278" 
                 scrolling="no"></iframe>`
             </section>
         </div>
