--- a/index.html
+++ b/index.html
@@ -59,10 +59,13 @@
                 scrolling="no">Your browser does not support iframes</iframe>
 
                 <iframe id="reddit-embed" 
-                src="https://www.redditmedia.com/r/girlsfrontline/comments/tqur46/weekly_commanders_lounge_march_29_2022/i312oo2/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark"
+                src="https://www.redditmedia.com/r/girlsfrontline/comments/tqur46/weekly_commanders_lounge_march_29_2022/i312oo2/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false"
                 sandbox="allow-scripts allow-same-origin allow-popups" 
                 style="border: none; width: 100%;" height="278" 
-                scrolling="no"></iframe>`
+                scrolling="no"></iframe>
+
+                <!-- &amp;theme=dark -->
+                
             </section>
         </div>
     </body>
