--- a/index.html
+++ b/index.html
@@ -52,22 +52,17 @@
             <section id="main_content">
                 <p><h1><a href="/GFL">Link to GFL FAQs</a></h1></p>
 
-                <iframe id="reddit-embed" 
-                src="https://www.redditmedia.com/r/girlsfrontline/comments/tqur46/weekly_commanders_lounge_march_29_2022/i312oo2/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false"
-                sandbox="allow-scripts allow-same-origin allow-popups" 
-                style="border: none; width: 100%;" height="278" 
-                scrolling="no"></iframe>
-
-
-                <iframe id="reddit-embed" 
+                <!-- <iframe id="reddit-embed" 
                 src="https://www.redditmedia.com/r/webdev/comments/u99d31/browser_support_for_reddit_embeds/i6bxart/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false"
                 sandbox="allow-scripts allow-same-origin allow-popups"
                 style="border: none; width: 100%" height="238"
                 scrolling="no">Your browser does not support iframes</iframe>
 
-
-                <!-- &amp;theme=dark -->
-
+                <iframe id="reddit-embed" 
+                src="https://www.redditmedia.com/r/girlsfrontline/comments/tqur46/weekly_commanders_lounge_march_29_2022/i312oo2/?depth=1&amp;showmore=false&amp;embed=true&amp;showmedia=false&amp;theme=dark"
+                sandbox="allow-scripts allow-same-origin allow-popups" 
+                style="border: none; width: 100%;" height="278" 
+                scrolling="no"></iframe> -->
             </section>
         </div>
     </body>
