--- a/GFL/index.html
+++ b/GFL/index.html
@@ -137,7 +137,9 @@
         }
 
         summary {
+            cursor: pointer;
             display: inline;
+            text-decoration: underline;
             color: rgb(233, 161, 152);
             text-shadow: 0 0 5px rgb(255 181 253 / 50%);
         }
