--- a/GFL/index.html
+++ b/GFL/index.html
@@ -73,6 +73,10 @@
             margin-inline-start: 10px;
         }
 
+        a {
+            text-decoration: none;
+        }
+
         /* #region Tags */
         .tags {
             outline: 2px solid aqua;
@@ -139,7 +143,6 @@
         summary {
             cursor: pointer;
             display: inline;
-            text-decoration: underline;
             color: rgb(233, 161, 152);
             text-shadow: 0 0 5px rgb(255 181 253 / 50%);
         }
