--- a/GFL/index.html
+++ b/GFL/index.html
@@ -73,7 +73,7 @@
             margin-inline-start: 10px;
         }
 
-        a {
+        fieldset a {
             cursor: pointer;
             text-decoration: none;
         }
