--- a/GFL/index.html
+++ b/GFL/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/assets/css/style.css?v=2d3b5126dd9bdaf552f3aef918356c51b10c15a9">
-        <link rel="stylesheet" href="/externalcss.css">
+        <link rel="stylesheet" href="/univasset/externalcss.css">
 
         <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
             <!-- Setup theme-color -->
@@ -165,9 +165,11 @@
 
         <div class="container">
             <section id="main_content">
+                <p><h1><a href="./mainpage">Link to topics repository</a></h1></p>
+                
                 <p>v 1.<span id="version-number"></span></p>
 
-                <p><h1><a href="./mainpage">Link to topics repository</a></h1></p>
+                <p><h1><a href="./starterguide">Link to basic game explanation guide</a></h1></p>
                 
                 <div id="input-type-container">
                     <label class="flex-checked"><input type="radio" name="input-type" onclick="switchInputMode(this)" value="search" checked><h2>Keyword</h2></label>
