--- a/GFL/starterguide.html
+++ b/GFL/starterguide.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- #include virtual="/univasset/styleheader.html" -->
+        <object name="styleheader" type="text/html" data="/univasset/styleheader.html"></object>
 
         <!-- Begin Jekyll SEO tag v2.8.0 -->
         <title>Starters Guide | GFL</title>
@@ -43,3 +43,5 @@
         </div>
     </body>
 </html>
+
+<!-- #include virtual="/univasset/styleheader.html" -->
