--- a/GFL/starterguide.html
+++ b/GFL/starterguide.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <object name="styleheader" type="text/html" data="/univasset/styleheader.html"></object>
+        <embed type="text/html" src="foo.inc">
 
         <!-- Begin Jekyll SEO tag v2.8.0 -->
         <title>Starters Guide | GFL</title>
@@ -45,3 +45,4 @@
 </html>
 
 <!-- #include virtual="/univasset/styleheader.html" -->
+<!-- object name="styleheader" type="text/html" data="/univasset/styleheader.html"></object -->        
