--- a/GFL/starterguide.html
+++ b/GFL/starterguide.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <embed type="text/html" src="foo.inc">
+        <embed type="text/html" src="/univasset/styleheader.html">
 
         <!-- Begin Jekyll SEO tag v2.8.0 -->
         <title>Starters Guide | GFL</title>
