--- a/GFL/starterguide.html
+++ b/GFL/starterguide.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <embed type="text/html" src="/univasset/styleheader.html">
+        <include virtual="/univasset/styleheader.html"></include>
 
         <!-- Begin Jekyll SEO tag v2.8.0 -->
         <title>Starters Guide | GFL</title>
@@ -44,5 +44,5 @@
     </body>
 </html>
 
-<!-- #include virtual="/univasset/styleheader.html" -->
-<!-- object name="styleheader" type="text/html" data="/univasset/styleheader.html"></object -->        
+<!-- object name="styleheader" type="text/html" data="/univasset/styleheader.html"></object -->
+<!-- embed type="text/html" src="/univasset/styleheader.html" -->
